--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,2 +1,6 @@
+form.reset=Reset
+form.showPwd=Show passwords
+form.submit=Submit
+user.confirmPwd=Confirm password
 user.password=Password
 user.username=Username (email address)
