Sign up form with validations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,10 @@
+error.emailPattern=Debe coincidir con el patron xxxxx@xxxx.xxx
+error.pwdPattern=El campo clave debe contener al menos un digito, una letra en minuscula, una letra en mayuscula y uno de los siguientes caracteres de puntuacion exclamacion: !, #, $, %, &
 form.reset=Resetear
 form.showPwd=Mostrar contraseñas
 form.submit=Enviar
+error.pwdLength=Longitud de entre 6 y 12 caracteres
 user.confirmPwd=Confirmar contraseña
 user.password=Contraseña
 user.username=Usuario (correo electronico)
+error.matchPwds=Las contraseñas no coinciden
