--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,10 @@
+error.emailPattern=Debe coincidir con el patron xxxxx@xxxx.xxx
+error.pwdPattern=The key field must contain at least one digit, one lowercase letter, one uppercase letter, and one of the following punctuation/exclamation characters: !, #, $, %, &
 form.reset=Reset
 form.showPwd=Show passwords
 form.submit=Submit
+error.pwdLength=Length between 6 and 12 characters
 user.confirmPwd=Confirm password
 user.password=Password
 user.username=Username (email address)
+error.matchPwds=Passwords doesn´t match
