Added client details basic behaviour

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,29 @@ user.confirmPwd=Confirmar contraseña
 user.password=Contraseña
 user.username=Usuario (correo electronico)
 error.matchPwds=Las contraseñas no coinciden
+client.detail.title=Detalle de cliente
+table.field=Campo
+table.value=Valor
+client.detail.user=Usuario
+client.detail.gender=Genero
+client.detail.birthDate=Fecha nacimiento
+client.detail.country=Pais de nacimiento
+client.detail.document=Documento
+client.detail.phoneNumber=Telefono
+client.detail.firstName=Nombre
+client.detail.lastName=Apellido
+client.detail.address=Direccion
+client.detail.deliveryAddress=Direcciones de entrega
+client.detail.totalSpentMoney=Gasto acumulado
+client.detail.clientType=Tipo de cliente
+client.detail.interestedCategories=Categorias de interes
+client.detail.comments=Comentarios
+client.detail.license=Licencia
+auditory.detail.entryDate=Fecha de creacion
+auditory.detail.entryUser=Usuario creador
+auditory.detail.lastModificationDate=Ultima modificacion
+auditory.detail.lastModificationUser=Usuario ultima modificacion
+auditory.detail.removedDate=Fecha borrado
+auditory.detail.removedUser=Usuario borrado
+client.detail.documentType=Tipo documento
+client.detail.id=ID
