--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,3 +8,29 @@ user.confirmPwd=Confirm password
 user.password=Password
 user.username=Username (email address)
 error.matchPwds=Passwords doesn´t match
+client.detail.title=Client´s detail
+table.field=Field
+table.value=Value
+client.detail.user=User
+client.detail.gender=Gender
+client.detail.birthDate=Birth date
+client.detail.country=Country
+client.detail.document=Document
+client.detail.phoneNumber=Number phone
+client.detail.firstName=Firstname
+client.detail.lastName=Lastname
+client.detail.address=Address
+client.detail.deliveryAddress=Delivery Address
+client.detail.totalSpentMoney=Spent money
+client.detail.clientType=Type client
+client.detail.interestedCategories=Interested categories
+client.detail.comments=Comments
+client.detail.license=License
+auditory.detail.entryDate=Entry date
+auditory.detail.entryUser=Entry user
+auditory.detail.lastModificationDate=Last modification date
+auditory.detail.lastModificationUser=Last modification user
+auditory.detail.removedDate=Removed date
+auditory.detail.removedUser=Removed user
+client.detail.documentType=Type document
+client.detail.id=ID
