--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,3 +34,4 @@ auditory.detail.removedDate=Fecha borrado
 auditory.detail.removedUser=Usuario borrado
 client.detail.documentType=Tipo documento
 client.detail.id=ID
+client.detail.titleList=Listado de clientes
