--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -34,3 +34,4 @@ auditory.detail.removedDate=Removed date
 auditory.detail.removedUser=Removed user
 client.detail.documentType=Type document
 client.detail.id=ID
+client.detail.titleList=List clients
