Category details added

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,3 +35,9 @@ auditory.detail.removedUser=Removed user
 client.detail.documentType=Type document
 client.detail.id=ID
 client.detail.titleList=List clients
+category.detail.code=Code
+category.detail.description=Description
+category.detail.id=id
+category.detail.parentCategory=Parent category
+category.detail.childCategories=Chil categories
+category.detail.title=Category
