--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,3 +35,9 @@ auditory.detail.removedUser=Usuario borrado
 client.detail.documentType=Tipo documento
 client.detail.id=ID
 client.detail.titleList=Listado de clientes
+category.detail.id=ID
+category.detail.code=Codigo
+category.detail.description=Descripcion
+category.detail.parentCategory=Categoria base
+category.detail.childCategories=Categorias hijas
+category.detail.title=Categoria
