Added promotion and custom exception ElementNotFound

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,3 +41,11 @@ category.detail.description=Descripcion
 category.detail.parentCategory=Categoria base
 category.detail.childCategories=Categorias hijas
 category.detail.title=Categoria
+promotion.detail.id=ID
+promotion.detail.description=Descripcion
+period.detail.initPeriod=Fecha inicial
+period.detail.finalPeriod=Fecha final
+promotion.detail.discount=Descuento
+promotion.detail.products=Productos incluidos
+promotion.detail.title=Promocion
+error.notFound=Error, elemento no encontrado
