--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -41,3 +41,11 @@ category.detail.id=id
 category.detail.parentCategory=Parent category
 category.detail.childCategories=Chil categories
 category.detail.title=Category
+promotion.detail.id=ID
+promotion.detail.description=Description
+period.detail.finalPeriod=Last date
+period.detail.initPeriod=Init date
+promotion.detail.discount=Discount
+promotion.detail.products=Products
+promotion.detail.title=Promotion
+error.notFound=Error, elemento not found
