Added auditory detail fragment and init product detail fragment

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -49,3 +49,6 @@ promotion.detail.discount=Discount
 promotion.detail.products=Products
 promotion.detail.title=Promotion
 error.notFound=Error, elemento not found
+product.detail.id=ID
+product.detail.code=Code
+product.detail.description=Description
