--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,3 +49,6 @@ promotion.detail.discount=Descuento
 promotion.detail.products=Productos incluidos
 promotion.detail.title=Promocion
 error.notFound=Error, elemento no encontrado
+product.detail.id=ID
+product.detail.code=Codigo
+product.detail.description=Descripcion
