Added product detail

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,3 +52,16 @@ error.notFound=Error, elemento no encontrado
 product.detail.id=ID
 product.detail.code=Codigo
 product.detail.description=Descripcion
+product.detail.price=Precio
+product.detail.totalSalesAmount=Ventas totales
+product.detail.totalSalesRevenue=Ganancia total
+product.detail.categories=Categorias
+product.detail.stock=Stock
+product.detail.minSupplierRequest=Unidades minimas para pedido
+product.detail.minHiddenStock=Unidades minimas para ocultar
+product.detail.discount=Descuento
+product.detail.newProduct=Producto nuevo
+product.detail.evaluation=Valoracion
+product.detail.brand=Marca
+product.detail.model=Modelo
+product.detail.comments=Comentarios
