--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -52,3 +52,16 @@ error.notFound=Error, elemento not found
 product.detail.id=ID
 product.detail.code=Code
 product.detail.description=Description
+product.detail.price=Price
+product.detail.totalSalesAmount=Total sales
+product.detail.totalSalesRevenue=Total sales revenue
+product.detail.categories=Categories
+product.detail.stock=Stock
+product.detail.minSupplierRequest=Minimun units to supplier request
+product.detail.minHiddenStock=Minimun units to hidde
+product.detail.discount=Discount
+product.detail.newProduct=New product
+product.detail.evaluation=Evaluation
+product.detail.brand=Brand
+product.detail.model=Model
+product.detail.comments=Comments
