Init lock and unlock behaviour, changed lock behaviour on authentication process (uncompleted)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,9 +4,9 @@ form.reset=Resetear
 form.showPwd=Mostrar contraseñas
 form.submit=Enviar
 error.pwdLength=Longitud de entre 6 y 12 caracteres
-user.confirmPwd=Confirmar contraseña
-user.password=Contraseña
-user.username=Usuario (correo electronico)
+form.user.confirmPwd=Confirmar contraseña
+form.user.password=Contraseña
+form.user.username=Usuario (correo electronico)
 error.matchPwds=Las contraseñas no coinciden
 client.detail.title=Detalle de cliente
 table.field=Campo
@@ -65,3 +65,11 @@ product.detail.evaluation=Valoracion
 product.detail.brand=Marca
 product.detail.model=Modelo
 product.detail.comments=Comentarios
+user.detail.listAdministration=Administracion usuarios
+user.detail.id=ID
+user.detail.email=Correo
+user.detail.password=Contraseña
+user.detail.dateLastConnection=Ultima conexion
+user.detail.lockDate=Dia de bloqueo
+user.detail.lockUser=
+user.detail.unlockUser=
