--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -4,9 +4,9 @@ form.reset=Reset
 form.showPwd=Show passwords
 form.submit=Submit
 error.pwdLength=Length between 6 and 12 characters
-user.confirmPwd=Confirm password
-user.password=Password
-user.username=Username (email address)
+form.user.confirmPwd=Confirm password
+form.user.password=Password
+form.user.username=Username (email address)
 error.matchPwds=Passwords doesn´t match
 client.detail.title=Client´s detail
 table.field=Field
@@ -65,3 +65,8 @@ product.detail.evaluation=Evaluation
 product.detail.brand=Brand
 product.detail.model=Model
 product.detail.comments=Comments
+user.detail.id=ID
+user.detail.email=Email
+user.detail.password=Password
+user.detail.dateLastConnection=Last connection
+user.detail.lockDate=Block date
