Lock users ajax

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -71,5 +71,6 @@ user.detail.email=Correo
 user.detail.password=Contraseña
 user.detail.dateLastConnection=Ultima conexion
 user.detail.lockDate=Dia de bloqueo
-user.detail.lockUser=
-user.detail.unlockUser=
+user.detail.lockUser=Bloquear
+user.detail.unlockUser=Desbloquear
+alert.lockUser=Se va a bloquear al usuario
