--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -70,3 +70,6 @@ user.detail.email=Email
 user.detail.password=Password
 user.detail.dateLastConnection=Last connection
 user.detail.lockDate=Block date
+user.detail.lockUser=Lock
+user.detail.unlockUser=Unlock
+alert.lockUser=Will lock user 
