Added remove and recover user without update view

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -74,3 +74,5 @@ user.detail.lockDate=Dia de bloqueo
 user.detail.lockUser=Bloquear
 user.detail.unlockUser=Desbloquear
 alert.lockUser=Se va a bloquear al usuario
+user.detail.removeUser=Dar de baja
+user.detail.recoverUser=Recuperar usuario
