--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -73,3 +73,5 @@ user.detail.lockDate=Block date
 user.detail.lockUser=Lock
 user.detail.unlockUser=Unlock
 alert.lockUser=Will lock user 
+user.detail.removeUser=Remove user
+user.detail.recoverUser=Recover user
