Init parameterized query client

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -76,3 +76,10 @@ user.detail.unlockUser=Desbloquear
 alert.lockUser=Se va a bloquear al usuario
 user.detail.removeUser=Dar de baja
 user.detail.recoverUser=Recuperar usuario
+form.client.search.patternLastName=Patron apellido
+form.client.search.clientType=Tipo cliente
+form.client.search.totalSpentMoneyMin=Minimo dinero gastado
+form.client.search.totalSpentMoneyMax=Maximo dinero gastado
+form.client.search.entryDateMin=Minima fecha de alta
+form.client.search.entryDateMax=Maxima fecha de alta
+form.client.search.searchButton=Buscar
