--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -75,3 +75,10 @@ user.detail.unlockUser=Unlock
 alert.lockUser=Will lock user 
 user.detail.removeUser=Remove user
 user.detail.recoverUser=Recover user
+form.client.search.patternLastName=Lastname pattern
+form.client.search.clientType=Client type
+form.client.search.totalSpentMoneyMin=Minimum spent money
+form.client.search.totalSpentMoneyMax=Maximum spent money
+form.client.search.entryDateMin=Minimum entry date
+form.client.search.entryDateMax=Maximum entry date
+form.client.search.searchButton=Search
