Remove promotions without removedUser

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -83,3 +83,5 @@ form.client.search.totalSpentMoneyMax=Maximo dinero gastado
 form.client.search.entryDateMin=Minima fecha de alta
 form.client.search.entryDateMax=Maxima fecha de alta
 form.client.search.searchButton=Buscar
+promotion.detail.listTitle=Listado de promociones
+promotion.detail.removeAll=Borrar promociones
