--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -82,3 +82,4 @@ form.client.search.totalSpentMoneyMax=Maximum spent money
 form.client.search.entryDateMin=Minimum entry date
 form.client.search.entryDateMax=Maximum entry date
 form.client.search.searchButton=Search
+promotion.detail.removeAll=Delete all
