Finished parameterized query client

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -85,3 +85,8 @@ form.client.search.entryDateMax=Maxima fecha de alta
 form.client.search.searchButton=Buscar
 promotion.detail.listTitle=Listado de promociones
 promotion.detail.removeAll=Borrar promociones
+
+typeMismatch.clientQueryDTO.entryDateMax = Formato no valido para una fecha
+typeMismatch.clientQueryDTO.entryDateMin = Formato no valido para una fecha
+typeMismatch.clientQueryDTO.totalSpentMoneyMax = Formato no valido para un numero decimal
+typeMismatch.clientQueryDTO.totalSpentMoneyMin = Formato no valido para un numero decimal
