--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -83,3 +83,8 @@ form.client.search.entryDateMin=Minimum entry date
 form.client.search.entryDateMax=Maximum entry date
 form.client.search.searchButton=Search
 promotion.detail.removeAll=Delete all
+
+typeMismatch.clientQueryDTO.entryDateMax = Invalid format for a date
+typeMismatch.clientQueryDTO.entryDateMin = Invalid format for a date
+typeMismatch.clientQueryDTO.totalSpentMoneyMax = Invalid format for a decimal number
+typeMismatch.clientQueryDTO.totalSpentMoneyMin = Invalid format for a decimal number
