Changed delete promotion behaviour and added view Order

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -88,3 +88,11 @@ typeMismatch.clientQueryDTO.entryDateMax = Invalid format for a date
 typeMismatch.clientQueryDTO.entryDateMin = Invalid format for a date
 typeMismatch.clientQueryDTO.totalSpentMoneyMax = Invalid format for a decimal number
 typeMismatch.clientQueryDTO.totalSpentMoneyMin = Invalid format for a decimal number
+order.detail.listTitle=Order list
+order.detail.id=ID
+order.detail.date=Date
+order.detail.client=Client
+order.detail.totalPrice=Total price
+order.detail.orderState=Order state
+order.detail.userAdmin=User admin
+promotion.deleteMessage=Deleted empty promotions (no products)
