--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,3 +90,11 @@ typeMismatch.clientQueryDTO.entryDateMax = Formato no valido para una fecha
 typeMismatch.clientQueryDTO.entryDateMin = Formato no valido para una fecha
 typeMismatch.clientQueryDTO.totalSpentMoneyMax = Formato no valido para un numero decimal
 typeMismatch.clientQueryDTO.totalSpentMoneyMin = Formato no valido para un numero decimal
+order.detail.listTitle=Lista de pedidos
+order.detail.id=ID
+order.detail.client=Cliente
+order.detail.date=Fecha
+order.detail.totalPrice=Precio total
+order.detail.orderState=Estado del pedido
+order.detail.userAdmin=Usuario administrador
+promotion.deleteMessage=Borradas las promociones vacias (sin producto)
