--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -96,3 +96,4 @@ order.detail.totalPrice=Total price
 order.detail.orderState=Order state
 order.detail.userAdmin=User admin
 promotion.deleteMessage=Deleted empty promotions (no products)
+order.detail.changeState=Update state
