First form register client

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -99,3 +99,8 @@ order.detail.orderState=Estado del pedido
 order.detail.userAdmin=Usuario administrador
 promotion.deleteMessage=Borradas las promociones vacias (sin producto)
 order.detail.changeState=Actualizar estado
+form.deselectAll=Deseleccionar
+form.selectFirst=Seleccionar primera
+error.dateEighteen=Debe ser mayor de 18 años.
+error.collection=Valor no valido, debe estar entre los posibles.
+error.patternDNINIE=DNI/NIE no valido.
