--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,3 +97,8 @@ order.detail.orderState=Order state
 order.detail.userAdmin=User admin
 promotion.deleteMessage=Deleted empty promotions (no products)
 order.detail.changeState=Update state
+form.deselectAll=Deselect
+form.selectFirst=Select first
+error.dateEighteen=Must be older than 18 years-old.
+error.collection=Invalid value, must be between possible values.
+error.patternDNINIE=Invalid DNI/NIE.
