Changed type fields personalDataDTO

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -104,3 +104,12 @@ form.selectFirst=Seleccionar primera
 error.dateEighteen=Debe ser mayor de 18 años.
 error.collection=Valor no valido, debe estar entre los posibles.
 error.patternDNINIE=DNI/NIE no valido.
+address.detail.typeRoad=Tipo de via
+address.detail.name=Nombre de la via
+address.detail.number=Numero
+address.detail.portal=Portal
+address.detail.floor=Planta
+address.detail.door=Puerta
+address.detail.city=Localidad
+address.detail.state=Estado
+address.detail.postcode=Codigo postal
