--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -102,3 +102,12 @@ form.selectFirst=Select first
 error.dateEighteen=Must be older than 18 years-old.
 error.collection=Invalid value, must be between possible values.
 error.patternDNINIE=Invalid DNI/NIE.
+address.detail.typeRoad=Type road
+address.detail.name=Name of road
+address.detail.number=Number
+address.detail.portal=Portal
+address.detail.floor=Floor
+address.detail.door=Door
+address.detail.city=City
+address.detail.state=State
+address.detail.postcode=Postcode
