Step 2 register client

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -113,3 +113,4 @@ address.detail.door=Puerta
 address.detail.city=Localidad
 address.detail.state=Estado
 address.detail.postcode=Codigo postal
+error.number=Debe ser un numero entero
