--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -111,3 +111,4 @@ address.detail.door=Door
 address.detail.city=City
 address.detail.state=State
 address.detail.postcode=Postcode
+error.number=Must be integer number
