Basic register form client

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -99,7 +99,7 @@ order.detail.orderState=Estado del pedido
 order.detail.userAdmin=Usuario administrador
 promotion.deleteMessage=Borradas las promociones vacias (sin producto)
 order.detail.changeState=Actualizar estado
-form.deselectAll=Deseleccionar
+form.deselectAll=Deseleccionar todo
 form.selectFirst=Seleccionar primera
 error.dateEighteen=Debe ser mayor de 18 años.
 error.collection=Valor no valido, debe estar entre los posibles.
@@ -114,3 +114,7 @@ address.detail.city=Localidad
 address.detail.state=Estado
 address.detail.postcode=Codigo postal
 error.number=Debe ser un numero entero
+error.license=Debe aceptar la licencia
+form.selectAll=Seleccionar todo
+form.nextStep=Siguiente paso
+form.backStep=Paso anterior
