--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,7 +97,7 @@ order.detail.orderState=Order state
 order.detail.userAdmin=User admin
 promotion.deleteMessage=Deleted empty promotions (no products)
 order.detail.changeState=Update state
-form.deselectAll=Deselect
+form.deselectAll=Deselect all
 form.selectFirst=Select first
 error.dateEighteen=Must be older than 18 years-old.
 error.collection=Invalid value, must be between possible values.
@@ -112,3 +112,7 @@ address.detail.city=City
 address.detail.state=State
 address.detail.postcode=Postcode
 error.number=Must be integer number
+error.license=Must accept license
+form.selectAll=Select all
+form.nextStep=Next step
+form.backStep=Back step
