Addded internationalization in register client form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -118,3 +118,7 @@ error.license=Debe aceptar la licencia
 form.selectAll=Seleccionar todo
 form.nextStep=Siguiente paso
 form.backStep=Paso anterior
+lang.change=Cambiar idioma
+lang.es=Español
+lang.eng=Ingles
+lang.changed=Se actualizara en la proxima iteraccion.
