--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -116,3 +116,7 @@ error.license=Must accept license
 form.selectAll=Select all
 form.nextStep=Next step
 form.backStep=Back step
+lang.change=Change language
+lang.es=Spanish
+lang.eng=English
+lang.changed=It will be updated in the next iteration.
