Added css des/active

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -122,3 +122,5 @@ lang.change=Cambiar idioma
 lang.es=Español
 lang.eng=Ingles
 lang.changed=Se actualizara en la proxima iteraccion.
+form.withCss=Activar css
+form.withoutCss=Desactivar css
