--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -120,3 +120,5 @@ lang.change=Change language
 lang.es=Spanish
 lang.eng=English
 lang.changed=It will be updated in the next iteration.
+form.withCss=Activate css
+form.withoutCss=Desactive css
