Resume view form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -124,3 +124,6 @@ lang.eng=Ingles
 lang.changed=Se actualizara en la proxima iteraccion.
 form.withCss=Activar css
 form.withoutCss=Desactivar css
+form.client.register.personalData=Datos personales
+form.client.register.contactData=Datos de contacto
+form.client.register.otherData=Otra informacion
