--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -122,3 +122,6 @@ lang.eng=English
 lang.changed=It will be updated in the next iteration.
 form.withCss=Activate css
 form.withoutCss=Desactive css
+form.client.register.personalData=Personal data
+form.client.register.contactData=Contact data
+form.client.register.otherData=Other data
