Init update product behaviour

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -127,3 +127,5 @@ form.withoutCss=Desactivar css
 form.client.register.personalData=Datos personales
 form.client.register.contactData=Datos de contacto
 form.client.register.otherData=Otra informacion
+product.detail.offer=En oferta
+form.update=Actualizar
