--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -125,3 +125,5 @@ form.withoutCss=Desactive css
 form.client.register.personalData=Personal data
 form.client.register.contactData=Contact data
 form.client.register.otherData=Other data
+product.detail.offer=Has offer
+form.update=Update
