Update product behaviour

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -129,3 +129,16 @@ form.client.register.contactData=Datos de contacto
 form.client.register.otherData=Otra informacion
 product.detail.offer=En oferta
 form.update=Actualizar
+jakarta.validation.constraints.NotEmpty.message=No debe estar vacio
+jakarta.validation.constraints.NotNull.message=No debe ser nulo
+typeMismatch.productDTO.price=Formato no valido
+typeMismatch.productDTO.stock=Formato no valido
+typeMismatch.productDTO.minSupplierRequest=Formato no valido
+typeMismatch.productDTO.minHiddenStock=Formato no valido
+typeMismatch.productDTO.discount=Formato no valido
+typeMismatch.productDTO.evaluation=Formato no valido
+error.decimal=Numero decimal con 2 decimales
+error.min=Valor minimo
+error.max=Valor maximo {0}
+error.valueExist=Ya existe ese valor en la BBDD.
+
