--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -127,3 +127,15 @@ form.client.register.contactData=Contact data
 form.client.register.otherData=Other data
 product.detail.offer=Has offer
 form.update=Update
+jakarta.validation.constraints.NotEmpty.message=Must no be empty
+jakarta.validation.constraints.NotNull.message=Must not be null
+typeMismatch.productDTO.price=Format not valid
+typeMismatch.productDTO.stock=Format not valid
+typeMismatch.productDTO.minSupplierRequest=Format not valid
+typeMismatch.productDTO.minHiddenStock=Format not valid
+typeMismatch.productDTO.discount=Format not valid
+typeMismatch.productDTO.evaluation=Format not valid
+error.decimal=Decimal number with 2 decimal places
+error.min=Min value
+error.max=Max value {0}
+error.valueExist=That value already exists in the database.
