--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -141,4 +141,5 @@ error.decimal=Numero decimal con 2 decimales
 error.min=Valor minimo
 error.max=Valor maximo {0}
 error.valueExist=Ya existe ese valor en la BBDD.
+product.detail.hidden=Oculto
 
