--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -139,3 +139,4 @@ error.decimal=Decimal number with 2 decimal places
 error.min=Min value
 error.max=Max value {0}
 error.valueExist=That value already exists in the database.
+product.detail.hidden=Hidden
