Added basic admin login

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -140,3 +140,5 @@ error.min=Min value
 error.max=Max value {0}
 error.valueExist=That value already exists in the database.
 product.detail.hidden=Hidden
+form.admin=Administrator
+form.login=Log in
