--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,4 +142,6 @@ error.min=Valor minimo
 error.max=Valor maximo {0}
 error.valueExist=Ya existe ese valor en la BBDD.
 product.detail.hidden=Oculto
+form.admin=Administrador
+form.login=Entrar
 
