--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -144,4 +144,10 @@ error.valueExist=Ya existe ese valor en la BBDD.
 product.detail.hidden=Oculto
 form.admin=Administrador
 form.login=Entrar
+warning.title=Avisos
+warning.detail.description=Descripcion
+warning.detail.processingDate=Fecha de procesado
+warning.detail.user=Usuario
+warning.detail.creationDate=Fecha de creacion
+warning.detail.process=Procesar
 
