--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -142,3 +142,9 @@ error.valueExist=That value already exists in the database.
 product.detail.hidden=Hidden
 form.admin=Administrator
 form.login=Log in
+warning.title=Warnings
+warning.detail.description=Description
+warning.detail.processingDate=Processing date
+warning.detail.user=User
+warning.detail.creationDate=Creation date
+warning.detail.process=Process
