Need login for all admin functions and UserAdmin added in updating data of database

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -150,4 +150,5 @@ warning.detail.processingDate=Fecha de procesado
 warning.detail.user=Usuario
 warning.detail.creationDate=Fecha de creacion
 warning.detail.process=Procesar
+form.updateProductConfirm=Se va actualizar el producto.
 
