--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -148,3 +148,4 @@ warning.detail.processingDate=Processing date
 warning.detail.user=User
 warning.detail.creationDate=Creation date
 warning.detail.process=Process
+form.updateProductConfirm=Product will be updated.
