Changed error not authenticated view

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -143,7 +143,7 @@ error.max=Valor maximo {0}
 error.valueExist=Ya existe ese valor en la BBDD.
 product.detail.hidden=Oculto
 form.admin=Administrador
-form.login=Entrar
+form.login=Iniciar sesion
 warning.title=Avisos
 warning.detail.description=Descripcion
 warning.detail.processingDate=Fecha de procesado
@@ -151,4 +151,6 @@ warning.detail.user=Usuario
 warning.detail.creationDate=Fecha de creacion
 warning.detail.process=Procesar
 form.updateProductConfirm=Se va actualizar el producto.
+error.notAuthenticated=Error de acceso. No puedes ejecutar esta funcionalidad sin estar \
+autenticado.
 
