--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -149,3 +149,5 @@ warning.detail.user=User
 warning.detail.creationDate=Creation date
 warning.detail.process=Process
 form.updateProductConfirm=Product will be updated.
+error.notAuthenticated=Access error. You cannot run this functionality without being\
+authenticated.
