Logged redirect register client if not have client user, register client redirect vue

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -151,3 +151,4 @@ warning.detail.process=Process
 form.updateProductConfirm=Product will be updated.
 error.notAuthenticated=Access error. You cannot run this functionality without being\
 authenticated.
+form.client.register.title=Client register
