Added some style

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -154,4 +154,5 @@ form.updateProductConfirm=Se va actualizar el producto.
 error.notAuthenticated=Error de acceso. No puedes ejecutar esta funcionalidad sin estar \
 autenticado.
 form.client.register.title=Registro de cliente
+layout.header.title=MARKET TECH
 
