--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -152,3 +152,4 @@ form.updateProductConfirm=Product will be updated.
 error.notAuthenticated=Access error. You cannot run this functionality without being\
 authenticated.
 form.client.register.title=Client register
+layout.header.title=MARKET TECH
