--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -155,4 +155,5 @@ error.notAuthenticated=Error de acceso. No puedes ejecutar esta funcionalidad si
 autenticado.
 form.client.register.title=Registro de cliente
 layout.header.title=MARKET TECH
+order.detail.productOrderDetailses=Productos
 
