--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -153,3 +153,4 @@ error.notAuthenticated=Access error. You cannot run this functionality without b
 authenticated.
 form.client.register.title=Client register
 layout.header.title=MARKET TECH
+order.detail.productOrderDetailses=Products
